tests/NormalTests/paczka1/fuzzy1/31895669.err
Error in line 5: veX8 A8x9 77,2
Error in line 9: TSGSWtd A849 65,7
Error in line 15: infehG94iKF S839 67,8
Error in line 19: veX8 A849 8,5
Error in line 34: veX8 A901 65,8
